hello-aks/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: #{aksResourcePrefix}#-demo-app-ingress
  annotations:
    kubernetes.io/ingress.class: backend-nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - saasdemo.jmasengesho.com
    secretName: nginx-cert
  rules:
  - host: saasdemo.jmasengesho.com
    http:
      paths:
      - backend:
          service: 
            name: #{aksResourcePrefix}#-demo-app-service
            port: 
              number: 80
        pathType: Prefix
        path: /(.*)
