hello-aks/k8s/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: #{aksResourcePrefix}#-demo-app-network-policy
  namespace: #{aksResourcePrefix}#
spec:
  podSelector:
    matchLabels:
      client: #{aksResourcePrefix}#
      app: #{aksResourcePrefix}#-demo-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: #{backendVmCidr}#
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: backend-ingress-nginx
    - podSelector:
        matchLabels:
          client: #{aksResourcePrefix}#
          app.kubernetes.io/name: backend-ingress-nginx
    ports:
    - protocol: TCP
      port: 80
